<resources>
    <string name="app_name">adria-pfe-github-repos</string>
    <string name="trending">Trending</string>
    <string name="settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close\n</string>
    <string name="getting_repositories">Getting repositories ...</string>
    <string name="next_page">Next Page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english">English</string>
    <string name="fran_ais">French</string>
    <string name="language">Language</string>
    <string name="language_settings">Language Settings</string>
    <string name="settings_title">Settings</string>
    <string name="display_mode">Display mode</string>
    <string name="trending_sidebar">Trending</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="display_mode_title">Display Mode</string>
    <string name="favorite">Favorite</string>
    <string name="delete">Delete</string>
    <string name="favorite_list">Favorite List</string>
</resources>