<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.languagesettings.LanguageSettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_shape"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/back_ic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_settings"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="14sp"
            app:layout_constraintRight_toRightOf="parent"
            android:fontFamily="@font/montserrat_medium"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_margin="20dp"
        android:background="@drawable/settings_bg_2"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/englishTV"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_medium"
            />
        <RadioButton
            android:id="@+id/radio_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:layout_constraintTop_toTopOf="@id/englishTV"
            app:layout_constraintBottom_toBottomOf="@id/englishTV"
            app:layout_constraintRight_toRightOf="parent"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/englishTV"
            android:id="@+id/view1"
            android:background="#B3B3B3"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fran_ais"
            app:layout_constraintTop_toBottomOf="@id/view1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/frenchTV"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_medium"
            />
        <RadioButton
            android:id="@+id/radio_french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:layout_constraintTop_toTopOf="@id/frenchTV"
            app:layout_constraintBottom_toBottomOf="@id/frenchTV"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>